remove old extensions, add demos